@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.9999999914';
+our $VERSION='0.9999999915';
 
 
 use 5.005;
